# INF6804_code

./: README.md
Background_segmentation/: evaluation.py
Background_segmentation/lobster/: CMakeLists.txt  baseline.txt  cam_jitter.txt  main.cpp  night.txt
Background_segmentation/rcnn/: detection_with_cameraImg.py
Descriptors/: datasets.py  experiments.py  hog.py  lbp.py  readme
Tracking/: evaluation.py  mot_metrics.py  results.txt  results_det.txt  sort.py  track.py  tracker.py
Tracking/ClassificationTracker/: detection_with_cameraImg.py
Tracking/ClassificationTracker/ObjectDetection_dependencies/: ObjectDetector.py
